--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,7 @@ body{
  }
 
  .oferta{
-  width: 400px;
+  width: 500px;
   margin:0px;
 }
 
@@ -149,5 +149,17 @@ body{
   
   .w{
   width: 300px;
+}
+  
+  p,h1,h2,h3,h4,h5{
+   font-size:30px 
+  }
+  
+  .card {
+  width: 500px;
+  border: none;
+  box-shadow: 5px 8px 8px 2px #cacaca;
+  border-radius: 12px;
+  
 }
 }
