--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,7 @@ body{
  }
 
  .oferta{
-  width: 400px;
+  width: 500px;
   margin:0px;
 }
 
@@ -142,6 +142,10 @@ body{
 .telefono2{
   width: 300px;
 }
+  
+  p,h1,h2,h3,h4,h5{
+  font-size:30px 
+ }
   
   
   body{
