--- a/styles.css
+++ b/styles.css
@@ -156,7 +156,7 @@ body{
   }
   
   .card {
-  width: 700px;
+  min-width: 700px;
   border: none;
   box-shadow: 5px 8px 8px 2px #cacaca;
   border-radius: 12px;
