--- a/styles.css
+++ b/styles.css
@@ -135,12 +135,12 @@ body{
 
 
 .telefono{
-  width: 500px;
-  margin-top: -50px;
+  width: 600px;
+  margin: -50px;
 }
 
 .telefono2{
-  width: 300px;
+  width: 400px;
 }
     body{
     
